--- a/src/app/modules/events/events/events.component.html
+++ b/src/app/modules/events/events/events.component.html
@@ -8,11 +8,7 @@
     <div class="events container">
         <div class="event-list pt-50">
             <div class="event-list-wrapper">
-                <div class="events-search d-flex justify-between pb-50">
-                    <div class="d-flex align-center justify-between w-100">
-                        <div>
-                            <p class="font-size-large font-semibold grey-text m-0" *ngIf="count>0"> {{count}} Events found</p>
-                        </div>
+                    <div class="events-search d-flex align-center justify-between w-100 pb-50">
                         <div class="search-wrapper">
                             <kendo-textbox class="w-100 search-input" [(ngModel)]="searchKey"
                                 placeholder="Search Events"  required (keyup.enter)="search()">
@@ -21,13 +17,10 @@
                                 </ng-template>
                             </kendo-textbox>
                         </div>
-                    </div> 
-                    <!-- <div class="d-flex align-center">
-                        <kendo-dropdownlist class="" [data]="sort" [(ngModel)]="selectedSort"
-                        textField="text" valueField="value"
-                        required></kendo-dropdownlist>
-                    </div> -->
-                </div>
+                        <div class="events-count">
+                            <p class="font-size-large font-semibold grey-text m-0" *ngIf="count>0"> {{count}} Event<span *ngIf="count>1">s</span> found</p>
+                        </div>
+                    </div>
                 <app-event-list [events]="events"></app-event-list>
             </div>
         </div>
