--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -5,6 +5,7 @@ $secondary-color: #47bce4;
 $text-main: #2A2642;
 $bg-blue: #f4f9ff;
 $grey-text: #424242;
+$light-text: #4d4f52;
 $light-border: #edf1f2;
 $hero-gradient: linear-gradient(90deg, hsla(7, 100%, 71%, 1) 0%, hsla(195, 74%, 59%, 1) 100%);
 
