--- a/src/app/modules/events/create-event/create-event.component.scss
+++ b/src/app/modules/events/create-event/create-event.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../assets/styles/variables';
 
 .ev-create-event {
-    .example {
+    .create-event-stepper {
         display: table;
         margin: auto;
         width: 450px;
