--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -10,26 +10,61 @@
         box-shadow: none;
         height: 60px;
         .logo {
-            height: 20px;
+            height: 17px;
         }
         kendo-menu {
             .k-menu {
                 .k-menu-item {
-                    border-bottom: 3px solid transparent;
                     a {
                         padding-left: 5px;
                         padding-right: 5px;
                     }
-                    a:hover {
-                        color: $primary-color;
-                    }
                     .active {
-                        color: $primary-color;
+                        border-bottom: 3px solid $primary-color;
+                    }
+                    :not(.active) {
                         font-weight: 600;
+                        -webkit-transform: translateZ(0);
+                        transform: translateZ(0);
+                        -webkit-backface-visibility: hidden;
+                        backface-visibility: hidden;
+                        -moz-osx-font-smoothing: grayscale;
+                        position: relative;
+                        overflow: hidden;
+                        &:before {
+                            content: "";
+                            position: absolute;
+                            z-index: -1;
+                            left: 50%;
+                            right: 50%;
+                            bottom: 0;
+                            height: 3px;
+                            background: $primary-color;
+                            -webkit-transition-property: left right;
+                            transition-property: left right;
+                            -webkit-transition-duration: 0.3s;
+                            transition-duration: 0.3s;
+                            -webkit-transition-timing-function: ease-out;
+                            transition-timing-function: ease-out;
+                        }
+                        &:hover:before {
+                            left: 0;
+                            right: 0;
+                        }
                     }
                 }
                 .k-menu-item:focus {
                     box-shadow: none;
+                }
+                height: 100%;
+                ul {
+                    height: 100%;
+                    li {
+                        height: 100%;
+                        a {
+                            padding-bottom: 0.5rem;
+                        }
+                    }
                 }
             }
             .k-menu:not(.k-context-menu) {
@@ -40,6 +75,7 @@
         }
         .profile-dropdown {
             button {
+                box-shadow: none;
                 background: transparent;
                 padding: 0;
                 border: 0;
