--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
             <img src="assets/icons/hamburger.svg" />
         </kendo-appbar-section>
         <kendo-appbar-section class="pb-2">
-            <img (click)="navLanding()" class="logo" src="assets/icons/ev-logo.svg" />
+            <img (click)="navLanding()" class="logo cursor-pointer" src="assets/icons/ev-logo.svg" />
         </kendo-appbar-section>
         <kendo-appbar-spacer></kendo-appbar-spacer>
         <ng-container *ngIf="!isSmallDevice">
