--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,6 +8,7 @@ $grey-text: #424242;
 $light-text: #4d4f52;
 $light-border: #edf1f2;
 $hero-gradient: linear-gradient(90deg, hsla(7, 100%, 71%, 1) 0%, hsla(195, 74%, 59%, 1) 100%);
+$gradient-overlay: linear-gradient(90deg, hsla(7, 100%, 71%, 0.3) 0%, hsla(195, 74%, 59%, 0.3) 100%);
 
 // theme
 $light: #ffffff;
