--- a/src/app/modules/events/event-list/event-list.component.html
+++ b/src/app/modules/events/event-list/event-list.component.html
@@ -38,7 +38,7 @@
             </div>
         </kendo-card>
     </div>
-    <div class="d-flex justify-center">
+    <div class="d-flex justify-center" *ngIf="events?.length > 0">
         <kendo-datapager
         [style.width.px]="width"
         [pageSize]="pageSize"
