--- a/src/app/modules/events/events/events.component.html
+++ b/src/app/modules/events/events/events.component.html
@@ -1,7 +1,6 @@
 <div class="ev-events pb-50">
     <div class="hero-wrapper d-flex flex-column align-center justify-center w-100">
-        <p class="header font-size-xl"><span class="font-regular">Join your hands and </span>
-            <span class="font-bold">make a better place to live</span>
+        <p class="header font-size-xl"><span class="font-bold"> Upcoming Events </span>
         </p>
         <button class="k-button k-primary ml-3" (click)="host()">Host an Event</button>
     </div>
