--- a/src/app/modules/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/src/app/modules/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,4 +1,4 @@
-<div class="ev-footprint">
+<div class="ev-footprint pb-50">
     <div class="hero-wrapper d-flex flex-column align-center justify-center w-100">
         <p class="header font-size-xl font-semibold">Carbon Footprint Calculator and Monitor
         </p>
@@ -27,4 +27,4 @@
     </div>
 </div>
 
-<div kendoDialogContainer></div>
+<div kendoDialogContainer class="carbon-dialog"></div>
