--- a/src/app/modules/carbon-footprint/carbon-footprint/carbon-footprint.component.scss
+++ b/src/app/modules/carbon-footprint/carbon-footprint/carbon-footprint.component.scss
@@ -1,3 +1,9 @@
 .ev-footprint {
     min-height: calc(100vh - 100px);
+    .k-dialog-wrapper {
+        .k-dialog {
+            height: 100%;
+            overflow: auto;
+        }
+    }
 }
