--- a/src/app/modules/laws/laws/laws.component.html
+++ b/src/app/modules/laws/laws/laws.component.html
@@ -1,4 +1,4 @@
-<div class="ev-laws">
+<div class="ev-laws pb-50">
     <div class="hero-wrapper d-flex flex-column align-center justify-center w-100">
         <p class="header font-size-xl">
             United States Statewise Recycling Laws
