--- a/src/app/modules/session/login/login.component.html
+++ b/src/app/modules/session/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="ev-login p-5 w-100">
     <div class="d-flex flex-column justify-center align-center">
-        <p class="m-0">Welcome to EcoVille</p>
-        <form class="k-form" [formGroup]="loginForm">
+        <p class="m-0 font-size-large grey-text font-semibold">Welcome to <span class="primary-text">EcoVille</span></p>
+        <form class="k-form pt-3" [formGroup]="loginForm">
             <fieldset class="k-form-fieldset">
                 <kendo-formfield>
                     <kendo-label [for]="email" text="Email"></kendo-label>
