--- a/src/app/modules/session/session/session.component.html
+++ b/src/app/modules/session/session/session.component.html
@@ -1,4 +1,4 @@
-<div class="ev-session w-100">
+<div class="ev-session w-100 pt-50 pb-50">
     <div class="card-wrapper">
         <kendo-card class="ev-session-card" [orientation]="'horizontal'" [width]="cardWidth">
             <div class="w-100">
