--- a/src/app/modules/session/signup/signup.component.html
+++ b/src/app/modules/session/signup/signup.component.html
@@ -1,7 +1,7 @@
-<div class="ev-login p-5 w-100">
+<div class="ev-signup w-100">
     <div class="d-flex flex-column justify-center align-center">
-        <p class="m-0">Signup</p>
-        <div class="form-wrapper d-flex justify-center w-100">
+        <p class="m-0 font-size-large grey-text font-semibold">Join <span class="primary-text">Now</span></p>
+        <div class="form-wrapper d-flex justify-center w-100 pt-3">
             <div class="stepper-wrapper w-100">
                 <kendo-stepper #stepper [steps]="steps" stepType="full" [(currentStep)]="currentStep"> </kendo-stepper>
                 <form class="k-form" [formGroup]="signupForm">
