--- a/src/assets/styles/_responsive.scss
+++ b/src/assets/styles/_responsive.scss
@@ -21,6 +21,16 @@
             }
         }
     }
+
+    .ev-login {
+        .k-form {
+            width: 250px !important;
+        }
+    }
+
+    .ev-signup {
+        padding: 2rem;
+    }
    
 }
 
