--- a/src/app/modules/session/login/login.component.html
+++ b/src/app/modules/session/login/login.component.html
@@ -17,7 +17,8 @@
                 </kendo-formfield>
 
                 <div class="k-form-buttons">
-                    <button class="k-button k-primary" (click)="login()">Login</button>
+                    <button class="k-button k-primary" (click)="login()">
+                        <kendo-loader *ngIf="isLoading" [size]="'medium'"></kendo-loader>Login</button>
                 </div>
             </fieldset>
         </form>
